--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "directories": {
     "doc": "doc",
     "test": "tests"
-  }, 
+  },
   "dependencies": {
     "ember-cli-babel": "^5.1.6",
     "ember-get-config": "^0.1.9"
@@ -42,6 +42,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-yuidoc": "0.8.7",
     "ember-cryptojs-shim": "1.1.0",
     "ember-data": "^2.7.0",
     "ember-disable-prototype-extensions": "^1.1.0",
