--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,8 @@
 engines:
   duplication:
     enabled: true
+    exclude_fingerprints:
+      - c32fcfbf63c1f4f0b23f68f3341dd5ce
     config:
       languages:
       - ruby
